# es71-ros

./: .gitignore  Assignment 1 ROS.docx  readme_menno.txt
assignment1/: .gitignore  CMakeLists.txt  manifest.xml
assignment1/launch/: assignment1.launch
assignment1/msg/: Triangle.msg
assignment1/src/: cmd.cpp  draw_triangle_node.cpp
assignment2/: .gitignore  Assignment 2 ROS.docx  CMakeLists.txt  mainpage.dox  manifest.xml
assignment2/data/: Robotics_Pose_Odometry.pptx  assignment2.docx
assignment2/launch/: assignment2-pointshoot.launch  assignment2-servoing.launch
assignment2/src/: steering_pointshoot_node.cpp  steering_servoing_node.cpp
assignment3/: .gitignore  Assignment 3 ROS.docx  CMakeLists.txt  mainpage.dox  manifest.xml  ~$signment 3 ROS.docx  ~WRL3861.tmp
assignment3/data/: Robotics_Path_Following.pptx  assignment3.docx
assignment4/: .gitignore  mainpage.dox  manifest.xml
assignment5/: Assignment 5 ROS.docx  CMakeLists.txt  clean.sh  package.xml
assignment5/data/: Robotics_Actions.pptx  assignment5.docx
assignment5/launch/: assignment5.launch
assignment5/msg/: MoveRotate.msg  Triangle.msg
assignment5/src/: assignment5_node.cpp  draw_triangle_node.cpp
assignment6/: Assignment 6 ROS.docx  CMakeLists.txt  markers.yaml  package.xml
assignment6/data/: Robotics_Motion_Planning.pptx  Robotics_Navigation.pptx  assignment6.docx
assignment6/launch/: assignment6.launch
assignment6/maps/: kinect_world_map.pgm  laser_world_map.yaml
assignment6/src/: assignment6_node.cpp
assignment6/world/: kinect_world_map.yaml  laser_world_map.pgm
assignment7/: Assignment 7 ROS.docx
(+24 files in other folders)
