<?xml version="1.0"?>
<package format="2">
  <name>assignment5</name>
  <version>0.0.0</version>

  <description>The assignment5 package</description>
  <maintainer email="r.grasman@student.fontys.nl">R Grasman</maintainer>
  <maintainer email="m.broeders@student.fontys.nl">M Broeders</maintainer>
  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>turtlebot_actions</build_depend>
  <exec_depend>turtlebot_actions</exec_depend>

  <export>

  </export>
</package>
