<?xml version="1.0"?>
<package format="2">
  <name>assignment6</name>
  <version>0.0.0</version>

  <description>The assignment6 package</description>
  <maintainer email="r.grasman@student.fontys.nl">R Grasman</maintainer>
  <license>MIT</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>

  <export>

  </export>
</package>
